@@ -5,59 +5,41 @@ import it.polimi.ingsw.server.model.enums.GameLevel;
 import java.util.List;
 
 public class Route {
-    private int length;
-    private List<Integer> startingPositions;
+    private GameLevel level;
+    private final int length;
+    private final List<Integer> startingPositions;
     private List<Integer> availableStartingPositions;
-    private RewardSystem rewardSystem;
+    private final RewardSystem rewardSystem;
 
     /**
-     * Constructor that initializes the Route based on the game level.
-     * @param level game level
+     * Constructs a new Route for the given game level, length, starting positions, and reward system.
+     * @param level The game level.
+     * @param length The length of the route.
+     * @param startingPositions The list of players' starting positions.
+     * @param rewardSystem The reward system associated with the route.
      */
-    public Route(GameLevel level, int lenght, List<Integer> startingPositions, RewardSystem rewardSystem ) {
-        this.length = lenght;
+    public Route(GameLevel level, int length, List<Integer> startingPositions, RewardSystem rewardSystem ) {
+        this.level = level;
+        this.length = length;
         this.startingPositions = startingPositions;
         this.availableStartingPositions = startingPositions;
         this.rewardSystem = rewardSystem;
     }
 
-    /**
-     * Returns the length of the route.
-     * @return length of the route
-     */
     public int getLength() { return length; }
-    /**
-     * Provides a list of all players' starting positions from first to last.
-     * @return players' starting positions
-     */
+
     public List<Integer> getStartingPositions() {
         return startingPositions;
     }
 
-    /**
-     * Provides a list of available starting positions.
-     * @return available starting positions
-     */
-    public List<Integer> getAvailableStartingPositions() {
+    public List<Integer> getAllAvailableStartingPositions() {
         return availableStartingPositions;
     }
 
-    /**
-     * Provides the first available starting position on the Route, and removes it from the available positions
-     * @return the position
-     */
     public int getFirstAvailableStartingPosition(){
-        Integer startingPosition = availableStartingPositions.get(0);
+        Integer startingPosition = availableStartingPositions.getFirst();
         availableStartingPositions.remove(startingPosition);
         return startingPosition;
     }
-
-    /**
-     * Normalize the position based on the number of laps completed by the player.
-     * @param position player's position
-     * @return player's normalized position
-     */
-    public int getNormalizedPosition(int position){ return position%(length); }
-
 }
 
